--- a/package.json
+++ b/package.json
@@ -30,14 +30,28 @@
   "type": "module",
   "main": "dist/livewire-drag-and-drop.umd.js",
   "module": "dist/livewire-drag-and-drop.es.js",
+  "files": [
+    "dist"
+  ],
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vite build"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "test:ci": "node --experimental-vm-modules node_modules/.bin/jest --ci --coverage --watchAll=false",
+    "test:accessibility": "node --experimental-vm-modules node_modules/.bin/jest --testPathPattern=accessibility",
+    "build": "vite build",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/user-event": "^14.6.1",
+    "jest": "^29.7.0",
+    "jest-axe": "^10.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "puppeteer": "^24.23.0",
     "vite": "^7.1.9"
   },
   "dependencies": {
